--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                       <span>Aug, 2021</span>
                       <h3>Web Designer</h3>
                       <h4>Web Developer</h4>
-                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos, nostrum quibusdam. Dolor aut tempora eligendi.</p>
+                      <p>I made many websites using HTML, CSS and JAVASCRIPT.</p>
                     </div>
                   </div>
                   <!-- end  -->
