--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                       <span>Aug, 2021</span>
                       <h3>Web Designer</h3>
                       <h4>Web Developer</h4>
-                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos, nostrum quibusdam. Dolor aut tempora eligendi.</p>
+                      <p>Web designing is a very interesting task especially for people who are new in this field.</p>
                     </div>
                   </div>
                   
