--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@
                     <div class="timeline-item-inner outer-shadow">
                       <i class="fas fa-briefcase icon"></i>
                       <span>Aug, 2021</span>
-                      <h3>Web Designer</h3>
+                      <h3>C Developer</h3>
                       <h4>Web Developer</h4>
-                      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos, nostrum quibusdam. Dolor aut tempora eligendi.</p>
+                      <p>C is very interesting and little bit easy language for coding.</p>
                     </div>
                   </div>
                   
