--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <div class="container">
         <div class="row">
           <div class="section-title">
-            <div class="data-heading">MAIN INFO</div>
+            <div class="data-heading">Main info</div>
             <h2>About me</h2>
           </div>
         </div>
