--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <div class="row">
           <div class="about-tabs">
             <span class="tab-item outer-shadow active" data-target = ".skills">skills</span>
-            <span class="tab-item" data-target = ".experience">experience</span>
+            <span class="tab-item" data-target = ".experience">Experience</span>
             <span class="tab-item" data-target = ".education">education</span>
           </div>
         </div>
