--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="container">
         <div class="row full-screen align-items-center">
           <div class="home-text">
-            <p>Hello, </p>
+          
             <!-- ========== Start typing animation ========== -->
             <div id="auto-typing-animation">
               <p>I'm <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
@@ -416,7 +416,7 @@
             <div class="row">
               <div class="section-title">
                 <div class="data-heading">portfolio</div>
-                <h2>Latest Works</h2>
+                <h2>Lates</h2>
               </div>
             </div>
             <!-- ========== Start portfolio filter========== -->
