--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                       <i class="fas fa-briefcase icon"></i>
                       <span>Aug, 2021</span>
                      
-                      <h4>Web Developer</h4>
+                      <h4>software developer</h4>
                       <p>I made many websites using HTML, CSS and JAVASCRIPT.</p>
                     </div>
                   </div>
