--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     <div class="timeline-item-inner outer-shadow">
                       <i class="fas fa-briefcase icon"></i>
                       <span>Aug, 2021</span>
-                     
+                     <h3>c developer </h3>
                       <h4>software developer</h4>
                       <p>I made many websites using HTML, CSS and JAVASCRIPT.</p>
                     </div>
