--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="row">
           <div class="section-title">
             <div class="data-heading">Main info</div>
-            <h2>About me</h2>
+            <h2>myself</h2>
           </div>
         </div>
         <div class="row">
