--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                   <div class="icon inner-shadow">
                     <i class="fas fa-palette"></i>
                   </div>
-                  <h3>Graphic design</h3>
+                  <h3>Graphic designer</h3>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo cum eos facere.</p>
                 </div>
               </div>
